Adding SME edits from Draft 4

--- a/stories/topics/con-saas-automation.adoc
+++ b/stories/topics/con-saas-automation.adoc
@@ -1,12 +1,13 @@
 [id="con-saas-automation"]
 = Automation using the {SaaSonAWS} control plane 
 
-The control plane {ControllerName} is the command center to run automation. 
-However, before automation can begin, the control plane must be configured to reach the execution nodes.
-The nature of the hosted control plane and remote execution plane requires traffic over networks to be set up securely. 
-{SaaSonAWSShort} implements a service architecture based on industry standard communication protocols and modern encryption algorithms to ensure that traffic between the control plane is secure.
+The control plane is the command center to run automation. 
+Before automation can begin, the control plane must be configured to reach the execution nodes.
+Secure network traffic is essential for the hosted control plane and remote execution plane. 
+{SaaSonAWSShort} uses industry-standard communication protocols and modern encryption to keep this traffic secure.
 
 There are two ways to configure the communication between control nodes and execution nodes:
 
-* Mesh ingress
-* Self-managed hop nodes (egress model)
+* The mesh egress model, also known as PULL connectivity (recommended)
+* The mesh ingress model, also known as PUSH connectivity  
+
