--- a/stories/topics/con-saas-connectivity.adoc
+++ b/stories/topics/con-saas-connectivity.adoc
@@ -2,10 +2,10 @@
 
 = Connectivity
 
-In general, the execution plane is able to communicate to the control plane when the following conditions are met:
+The execution plane can communicate with the control plane under the following conditions:
 
-* Polling (mesh-ingress): Execution nodes must be able to route stateful egress traffic to the domain of the {PlatformNameShort} deployment over port 443.
-* Push: A configurable firewall port must be opened within a customer’s remote networks to allow for {PlatformNameShort} to push information to execution nodes.
+* Polling (mesh-ingress): Execution nodes must route stateful egress traffic to the {PlatformNameShort} deployment domain over port 443.
+* Push: A configurable firewall port must be open in the customer’s remote networks to allow {PlatformNameShort} to push information to execution nodes.
 
 You can configure automation mesh nodes behind firewalls, proxy servers, and similar services. 
 These services route or proxy traffic originating from {PlatformNameShort} without altering headers, payload, or other information that would affect functionality of the automation mesh.
