--- a/stories/topics/con-saas-customer-access.adoc
+++ b/stories/topics/con-saas-customer-access.adoc
@@ -3,13 +3,13 @@
 
 Your access to the control plane is specific to the {PlatformNameShort} user interfaces and APIs.
 
-During the initial configuration of an {SaaSonAWSShort} deployment, you are provided with the URL of your deployment. 
-You can also access this information after deployment through the Red{nbsp}Hat Hybrid Cloud Console (HCC).
+During the initial configuration of an {SaaSonAWSShort} deployment, you receive the URL for your deployment. 
+You can also find this information through the Red{nbsp}Hat Hybrid Cloud Console (HCC).
 
-An initial password for the administrator account is provided to the HCC user that performed the initial deployment.
+The administrator account's initial password is provided to the HCC user who performed the initial deployment.
 
 [IMPORTANT]
 ====
-Change this password immediately after logging into {PlatformNameShort} for the first time.
+Change this password immediately after your first login to {PlatformNameShort}.
 ====
-If you require assistance accessing your deployment, you can submit a support request through the link:https://access.redhat.com/support[Red Hat Customer Portal].
+If you need help accessing your deployment, submit a support request through the link:https://access.redhat.com/support[Red Hat Customer Portal].
