--- a/stories/topics/con-saas-dns.adoc
+++ b/stories/topics/con-saas-dns.adoc
@@ -2,5 +2,4 @@
 
 = DNS
 
-Execution nodes use the DNS configuration of the host machine when performing DNS queries. 
-You must configure DNS through standard RHEL network configuration practices in order to ensure proper lookup when automation is run.
+Execution nodes use the DNS configuration of the host machine for DNS queries. Configure DNS using standard RHEL network practices to ensure proper lookups during automation execution.
