--- a/stories/topics/con-saas-infastructure-monitoring.adoc
+++ b/stories/topics/con-saas-infastructure-monitoring.adoc
@@ -2,4 +2,4 @@
 = Infrastructure monitoring 
 
 Red{nbsp}Hat is responsible for monitoring the control plane. 
-You do not have access to add any additional monitoring to resources that run the control plane.
+You do not have access to add any additional monitoring to the resources that run the control plane.
