--- a/stories/topics/con-saas-limited-support-status.adoc
+++ b/stories/topics/con-saas-limited-support-status.adoc
@@ -1,16 +1,15 @@
 [id="con-saas-limited-support-status"]
 = Limited support status
 
-When a deployment transitions to a "Limited Support" status, Red{nbsp}Hat no longer troubleshoots issues related to the execution plane. 
+When a deployment transitions to "Limited Support" status, Red Hat will no longer troubleshoot execution plane issues.
 The SLA is no longer applicable and credits requested against the SLA are denied. 
-It does not mean that you no longer have product support. 
-A deployment can return to a fully-supported status if you remediate the violating factors (see examples below). 
+However, this does not mean you lose all product support. A deployment can return to full support if you address the issues that caused the limited status. 
 
-A deployment might move to a Limited Support status for many reasons, including the following scenarios:
+A deployment might move to a Limited Support status for several reasons, including:
 
-If you do not implement an execution plane:: A customer execution plane is required for automation to be performed. 
-If you have not yet configured an execution plane, or have an execution plane in a degraded state, you must correct issues with the execution plane prior to support for automation being provided.
-If you do not maintain the execution plane with supported dependencies:: 
-Both Red{nbsp}Hat Enterprise Linux (RHEL) and OpenShift-based execution planes require maintenance and upgrades to ensure that those resources maintain the minimum supported versions for {PlatformNameShort} dependencies.
-You can Upgrade these resources through different models. For example, you can use Ansible for patching, Red Hat Satellite, and DNF automatic.
-Ensuring that the OS, cluster, and receptor resources are up-to-date with supported {PlatformNameShort} versions reduces a support dependency impact.
+Lack of an execution plane:: A customer execution plane is required for automation. 
+If you have not configured one or if it's in a degraded state, you must fix these issues before receiving automation support.
+Unsupported Execution Plane Dependencies:: 
+Both Red{nbsp}Hat Enterprise Linux (RHEL) and OpenShift-based execution planes need regular maintenance and upgrades to meet minimum supported versions for {PlatformNameShort} dependencies.
+You can upgrade these resources using various methods, such as Ansible for patching, Red Hat Satellite, or DNF automatic updates.
+Keeping your OS, cluster, and receptor resources updated with supported {PlatformNameShort} helps reduce support issues.
