--- a/stories/topics/con-saas-support.adoc
+++ b/stories/topics/con-saas-support.adoc
@@ -2,8 +2,8 @@
 
 = Support
 
-{SaaSonAWS} includes Red{nbsp}Hat Premium Support, which can be accessed by using the link:https://access.redhat.com/support[Red Hat Customer Portal].
+{SaaSonAWS} includes Red{nbsp}Hat Premium Support, accessible through the link:https://access.redhat.com/support[Red Hat Customer Portal].
 
-See {SaaSonAWS} link:https://access.redhat.com/support/offerings/production/sla[Production Support Terms of Service] for support response times.
+For support response times, refer to the link:https://access.redhat.com/support/offerings/production/sla[Production Support Terms of Service].
 
-AWS support is subject to a customer’s existing support contract with AWS.
+AWS support is subject to the customer’s existing support contract with AWS.
