--- a/stories/topics/proc-saas-set-up-private.adoc
+++ b/stories/topics/proc-saas-set-up-private.adoc
@@ -1,8 +1,7 @@
 [id="proc-saas-set-up-private"]
 
-= Subscribing and provisioning a {SaaSonAWS} private offer
-A private offer has pricing and licensing terms specifically offered to your account.
-The offer has a set expiration date, if you do not accept the private offer by the expiration date, you are either automatically moved to the product's public offer or no longer subscribed to the product.
+= Private offer
+A private offer includes specific pricing and licensing terms for your account and has an expiration date. If you do not accept the offer by that date, you will either be moved to the public offer for the product or no longer subscribed to it.
 
 .Prerequisites
 * An AWS Account
@@ -20,7 +19,7 @@ The offer has a set expiration date, if you do not accept the private offer by t
 If you have already accepted your offer you can find it in the *Manage subscriptions* page.
 ====
 +
-. CLick the URL under the *Offer ID* column. This redirects you to the *Offer Selection* page. 
+. Click the URL under the *Offer ID* column. This redirects you to the *Offer Selection* page. 
 . Click btn:[Create contract].
 . Click btn:[Click Set up your account]. This redirects you to {RHSSO} where you must:
 .. Create or sign into your Red{nbsp}Hat account.
@@ -34,19 +33,6 @@ This account ID must be the account ID that purchased the offer from the AWS mar
 . Select your desired region and click btn:[Next].
 . Click btn:[Provision].
 
-This redirects you to the *Environment details* page of the *Instances* tab which displays all the details of the instance you created.
-From here you can view whether your instance is *Ready* or still in a *Provision in progress* state.
-
-Provisioning your environment can take up to two hours.
-When your environment is ready a confirmation email is sent to the email address linked to your account. 
-
-[IMPORTANT]
-====
-Update your password as soon as possible.
-Your confirmation email includes a link that shows your admin password.
-Use this password to log-in and change your password.
-This link can only be accessed once, so ensure you are ready before clicking it.  
-
-If you did not receive the email or the initial admin password has expired, you must to submit a link:https://access.redhat.com/support[support ticket] and the Red{nbsp}Hat team will assist you with next steps.
-====
+This redirects you to the *Environment details* page of the *Instances*, where you can see all the details of your created instance.
+Here you can check whether your instance is *Ready* or still in a *Provision in progress* state.
  
