--- a/stories/topics/proc-saas-set-up-public.adoc
+++ b/stories/topics/proc-saas-set-up-public.adoc
@@ -1,6 +1,6 @@
 [id="proc-saas-set-up-public"]
 
-= Subscribing and provisioning {SaaSonAWS} from the AWS Marketplace
+= Public offer
 
 To set up {SaaSonAWS} you must link your {AWS} (AWS) and Red{nbsp}Hat accounts through the AWS marketplace.
 When you link your accounts you can provision and configure your cluster through the Red{nbsp}Hat Hybrid Cloud Console.  
@@ -18,7 +18,7 @@ When you link your accounts you can provision and configure your cluster through
 If you have already accepted your offer you can find it in the *Manage subscriptions* page.
 ====
 +
-. In the search bar, search for "{SaaSonAWS}." 
+. Search for "{SaaSonAWS}" in the search field. 
 ** Depending on your region select one of the following: 
 *** For EMEA, select *Red{nbsp}Hat Limited*.
 *** For the rest of the world, select *Red{nbsp}Hat*.
@@ -34,24 +34,12 @@ If you have already accepted your offer you can find it in the *Manage subscript
 . This then redirects you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment. 
 . Enter your AWS account ID and click btn:[Verify].
 +
-This account ID must be the account ID that purchased the offer from the AWS marketplace. 
+This account ID must be the account ID that purchased the offer from the AWS Marketplace. 
 The system does not recognize associated or nested accounts.
 . After your AWS ID is validated click btn:[Next].
 . Select your desired region.
 . Click btn:[Provision].
 
-This redirects you to the *Environment details* page of the *Instances* tab which displays all the details of the instance you created.
-From here you can view whether your instance is *Ready* or still in a *Provision in progress* state.
+This redirects you to the *Environment details* page of the *Instances*, where you can see all the details of your created instance.
+Here you can check whether your instance is *Ready* or still in a *Provision in progress* state.
 
-Provisioning your environment can take up to two hours.
-When your environment is ready a confirmation email is sent to the email address linked to your account. 
-
-[IMPORTANT]
-====
-Update your password as soon as possible.
-Your confirmation email includes a link that shows your admin password.
-Use this password to log-in and change your password.
-This link can only be accessed once, so ensure you are ready before clicking it. 
-
-If you did not receive the email or the initial admin password has expired, you must to submit a link:https://access.redhat.com/support[support ticket] and the Red{nbsp}Hat team will assist you with next steps.
-====
