--- a/stories/topics/ref-saas-egress-model.adoc
+++ b/stories/topics/ref-saas-egress-model.adoc
@@ -1,8 +1,8 @@
 [id="ref-saas-egress-model"]
-= Egress model or pull connectivity
+= Mesh egress model or PULL connectivity
 
-Remote automation mesh nodes can poll the {PlatformNameShort} without needing to open ingress ports through the firewall, using a 'polling' or 'pull' model. 
-This model eliminates the need to have hop nodes from your DMZ to private networks if private networks have outbound internet connectivity.
+Remote automation mesh nodes can access {PlatformNameShort} using a 'polling' or 'pull' model, which does not require opening ingress ports in the firewall.
+This model eliminates the need for hop nodes from your DMZ to private networks if private networks have outbound internet connectivity.
 
-.Figure 3.1.1 Egress model
-image:Egress.png[Egress model] 
+.Figure 1 Egress model
+image:mesh_egress.png[Egress model] 
