--- a/stories/topics/ref-saas-mesh-ingress-model.adoc
+++ b/stories/topics/ref-saas-mesh-ingress-model.adoc
@@ -1,9 +1,9 @@
 [id="ref-saas-mesh-ingress-model"]
-=  Mesh ingress model or push connectivity
+=  Mesh ingress model or PUSH connectivity
 
-Customers have the flexibility to design their automation mesh architecture using the mesh ingress model including the ability to configure the ports on which automation mesh communicates. 
-These ports must not conflict with existing traffic, like HTTPS.
-{SaaSonAWSShort} supports current automation mesh capabilities that push communication about automation to automation mesh nodes; both hop nodes and execution nodes. 
+Customers can design their automation mesh architecture using the mesh ingress model and configure the communication ports. 
+The default port is 27199, which must not conflict with other traffic, such as HTTPS. 
+{SaaSonAWSShort} supports current automation mesh features that push communication to both hop nodes and execution nodes.
 
-.Figure 3.1.2 Mesh ingress model
-image:Ingress+egress.png[Ingress vs egress model] 
+.Figure 1 Mesh ingress model
+image:mesh_ingress.png[Ingress model] 
