--- a/stories/assembly-saas-intro.adoc
+++ b/stories/assembly-saas-intro.adoc
@@ -3,11 +3,9 @@ ifdef::context[:parent-context: {context}]
 :context: saas-intro
 
 [id="saas-intro"]
-= Understanding {SaaSonAWS}
+= Introduction to {SaaSonAWS}
 
 include::topics/con-saas-intro.adoc[leveloffset=+1]
-include::topics/ref-saas-default-configs.adoc[leveloffset=+1]
-include::topics/ref-saas-planning-configs.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
