--- a/stories/topics/con-saas-application-monitoring-and-customer-audits.adoc
+++ b/stories/topics/con-saas-application-monitoring-and-customer-audits.adoc
@@ -1,5 +1,5 @@
 [id="application-monitoring-and-customer-audits"]
 = Application monitoring and customer audits
 
-The {PlatformNameShort} activity stream provides detailed information about access to {PlatformNameShort} and how you can use it. 
-If you need to retain this information for auditing or compliance reasons, you must export logs to supported logging services to retain and query logs.
+The {PlatformNameShort} activity stream provides detailed information about access to {PlatformNameShort} and usage. 
+To retain this information for auditing or compliance, you must export the logs to supported logging services for retention and querying.
