--- a/stories/topics/con-saas-execution-plane.adoc
+++ b/stories/topics/con-saas-execution-plane.adoc
@@ -1,9 +1,9 @@
 [id="con-saas-execution-plane"]
 
 = Execution plane
-The ability to run jobs on the default or controller execution planes is limited to test and cleanup jobs. 
-You must configure all automation to happen on your execution plane.
-You are provided with 10 Red{nbsp}Hat Enterprise Linux (RHEL) entitlements for running the execution plane as part of the {SaaSonAWSShort} subscription.  Additional RHEL or OpenShift licenses can be purchased separately.
+You can only run test and cleanup jobs on the default or controller execution planes. All other automation must be configured to run on your execution plane.
+
+As part of the {SaaSonAWSShort} subscription, you receive 10 Red Hat Enterprise Linux (RHEL) entitlements for running the execution plane. Additional RHEL or OpenShift licenses can be purchased separately.
 
 include::con-saas-shape.adoc[leveloffset=+1]
 include::con-saas-networking.adoc[leveloffset=+1]
@@ -12,3 +12,4 @@ include::con-saas-connectivity.adoc[leveloffset=+2]
 include::con-saas-monitoring.adoc[leveloffset=+1]
 include::con-saas-dns.adoc[leveloffset=+1]
 include::con-saas-networking-with-overlapping-CDIR-blocks.adoc[leveloffset=+1]
+include::con-saas-updates-and-maintenance.adoc[leveloffset=+1]
