--- a/stories/topics/con-saas-hosted-components.adoc
+++ b/stories/topics/con-saas-hosted-components.adoc
@@ -1,8 +1,8 @@
 [id="con-saas-hosted-components"]
 = Hosted components
 
-The objective of this offering is to run all of {PlatformNameShort} where Red{nbsp} manages the control plane and the execution plane is distributed to your domains.
-Unless otherwise specified, all {PlatformNameShort} capabilities available in the operator-based deployment model are supported.
+The objective of this offering is to provide a {PlatformNameShort} deployment as a managed service, relieving customers of managing the {PlatformNameShort} control plane.
+Unless specified otherwise, all {PlatformNameShort} capabilities in the operator-based deployment model are supported.
 
 [cols=2*]
 |===
@@ -10,6 +10,6 @@ Unless otherwise specified, all {PlatformNameShort} capabilities available in th
 |Availability plans
 
 |Event-Driven Ansible
-|Event-Driven Ansible (EDA) is planned to be offered as a part of this service, but not at the initial release. Customers can deploy a self-managed instance of EDA that can be used with the service until the service offers EDA directly.
+|Event-Driven Ansible (EDA) is planned to be offered as a part of this service, but not at the initial release. 
 
 |===
