--- a/stories/topics/con-saas-intro.adoc
+++ b/stories/topics/con-saas-intro.adoc
@@ -1,8 +1,9 @@
 [id="con-saas-intro"]
 = About {SaaSonAWS}
-The {SaaSonAWS} provides you with an {PlatformNameShort} deployment purchased through AWS Marketplace. Red Hat configures and provisions an {PlatformNameShort} environment.
-The Red{nbsp}Hat team manages the uptime and lifecycle of {PlatformNameShort}applications, while providing the flexibility and security of automation. 
+The {SaaSonAWS} offers a deployment of  {PlatformNameShort} deployment purchased through link:https://aws.amazon.com/marketplace[AWS Marketplace].
+Red{nbsp}Hat configures and provisions an {PlatformNameShort} environment.
+The Red{nbsp}Hat team handles the setup and maintenance of the {PlatformNameShort} environment, ensuring reliability and security.
 
-While the control plane  is managed by the Red{nbsp}Hat team, the execution plane is distributed to your domains through the automation mesh hop node and execution nodes.   
+While Red{nbsp}Hat manages the control plane, the execution plane is spread across your domains using automation mesh hop nodes and execution nodes.
+For help with configuring execution nodes see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[Red Hat Ansible Automation Platform Automation Mesh for operator-based installations]
 
-This service uses the enhancements and features available in {PlatformNameShort}.
