--- a/stories/topics/con-saas-networking-with-overlapping-CDIR-blocks.adoc
+++ b/stories/topics/con-saas-networking-with-overlapping-CDIR-blocks.adoc
@@ -2,6 +2,5 @@
 
 = Networking with overlapping CDIR blocks
 
-Automation mesh enables connectivity between the control plane and multiple networks that use the same Classless Inter-Domain Routing (CIDR) block (that is, the same class A address space repeated across different clouds or data centers). 
-Execution nodes treat the network in which they are deployed as the local network. 
-You must have at least one execution node instance paired with an instance group to target automation in each of the networks.
+Automation mesh connects the control plane to multiple networks that share the same Classless Inter-Domain Routing (CIDR) block (that is, the same class A address space repeated across different clouds or data centers). 
+Execution nodes regard their deployment network as the local network. You must have at least one execution node instance paired with an instance group to target automation in each network.
