--- a/stories/topics/con-saas-sre-access-and-management.adoc
+++ b/stories/topics/con-saas-sre-access-and-management.adoc
@@ -1,13 +1,14 @@
 [id="con-saas-sre-access-and-management"]
 = SRE access and management
 
-Site Reliability Engineering (SRE) access is specific to the infrastructure and services running {PlatformNameShort}. 
-Red Hat does not access the {PlatformNameShort} interfaces or APIs except for extenuating circumstances, such as a support engagement that requires it. 
-In such cases, access is provided by the customer to the SRE team for troubleshooting those issues.
+Site Reliability Engineering (SRE) access is limited to the infrastructure and services running {PlatformNameShort}. 
+Red Hat only accesses the {PlatformNameShort} interfaces or APIs in exceptional cases, such as during support engagements.
 
-SRE access to control plane resources is limited to operations that must be performed by a person and cannot be automated. 
-In such cases, any access to a particular control plane follows a request-and-approval process, and the access is audited, to ensure that only permitted personnel have access to perform these operations.
+SRE access to control plane resources is restricted to operations that require human intervention and cannot be automated.
+Any access follows a request-and-approval process and is audited to ensure only authorized personnel can perform these operations.
 
-The following describes the process that SREs use to access resources and the audit data that is captured whenever an operation against resources is performed.
+SREs access resources and audit data are collected when:
 
-* *need steps*
+* The SRE team requests access to cluster resources using a tool that allows temporary access. This tool generates a log entry detailing the time and the SRE team member who requested access.
+
+* Audit logs are created for any management operation performed on a customer instance and are sent to a centralized logging system
