--- a/stories/topics/con-saas-status-notification.adoc
+++ b/stories/topics/con-saas-status-notification.adoc
@@ -1,4 +1,4 @@
 [id="con-saas-status-notification"]
 = Status notification
 
-Red{nbsp}Hat communicates the health and status of {SaaSonAWS} clusters through a combination of user interfaces on Red{nbsp}Hat Hybrid Cloud Console, email notifications sent to the email address of the contact that originally deployed the cluster, and any additional contacts you specify.
+Red{nbsp}Hat communicates the health and status of {SaaSonAWS} clusters through the Red{nbsp}Hat Hybrid Cloud Console, email notifications to the original deployment contact, and any additional contacts you specify.
