AAP-32244 fixed links in using AA

--- a/downstream/modules/analytics/proc-ignoring-nested-workflows-jobs.adoc
+++ b/downstream/modules/analytics/proc-ignoring-nested-workflows-jobs.adoc
@@ -12,5 +12,5 @@ Select the settings icon on the *Job Explorer* view and use the toggle switch to
 
 Nested workflows allow you to create workflow job templates that call other workflow job templates. Nested workflows promotes reuse, as modular components, of workflows that include existing business logic and organizational requirements in automating complex processes and operations.
 
-To learn more about nested workflows, see _Workflows_ in the {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-workflows[Automation Controller User Guide].
+To learn more about nested workflows, see Workflows in automation controller in the {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/using_automation_execution/controller-workflows[{TitleControllerUserGuide}].
 ====
