--- a/downstream/modules/aap-hardening/con-platform-components.adoc
+++ b/downstream/modules/aap-hardening/con-platform-components.adoc
@@ -11,4 +11,4 @@
 
 [role="_additional-resources"]
 .Additional resources
-For more information about the components provided within {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/ref-aap-components[Red Hat Ansible Automation Platform components] in the _Red Hat Ansible Automation Platform Planning Guide_.
+For more information about the components provided within {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/planning_your_installation/ref-aap-components[Red Hat Ansible Automation Platform components] in _{TitlePlanningGuide}_.
