--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -34,4 +34,4 @@ The following procedures form the user configuration:
 . link:{URLCentralAuth}/gw-managing-access#ref-controller-user-roles[Adding roles for a user]
 . link:{URLCentralAuth}/assembly-gw-roles[Roles]
 
-* If you plan to use {EDAName} 2.5 with a 2.4 {PlatformNameShort}, see link:docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4/index[Using Event-Driven Ansible 2.5 with Ansible Automation Platform 2.4].
+* If you plan to use {EDAName} 2.5 with a 2.4 {PlatformNameShort}, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4/index[Using Event-Driven Ansible 2.5 with Ansible Automation Platform 2.4].
