Edits to UI in using automation execution
Updates to UI in using automation execution

https://issues.redhat.com/browse/AAP-32375

Affects `titles/controller-user-guide`

--- a/downstream/modules/platform/proc-controller-add-users-job-templates.adoc
+++ b/downstream/modules/platform/proc-controller-add-users-job-templates.adoc
@@ -10,7 +10,7 @@
 You can see users and teams associated with this credential and their roles.
 If no users exist, add them from the *Users* menu.
 For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/access_management_and_authentication/gw-managing-access#assembly-controller-users_gw-manage-rbac[Users].
-
+. Click btn:[Add roles].
 . Select the user(s) that you want to give access to the credential and click btn:[Next].
 . From the *Select roles to apply* page, select the roles you want to add to the User.
 . Click btn:[Next].
