--- a/downstream/modules/platform/proc-controller-create-container-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-container-group.adoc
@@ -60,4 +60,4 @@ For more information, see xref:controller-create-credential[Creating a credentia
 . From the navigation panel, select {MenuInfrastructureInstanceGroups}.
 . Click btn:[Create group] and select *Create container group*.
 . Enter a name for your new container group and select the credential previously created to associate it to the container group.
-. Click btn:[Create Container Group].
+. Click btn:[Create container group].
