--- a/downstream/modules/platform/proc-controller-create-credential.adoc
+++ b/downstream/modules/platform/proc-controller-create-credential.adoc
@@ -19,19 +19,6 @@ Add more credentials as needed.
 
 .Procedure
 . From the navigation panel, select {MenuAECredentials}.
-//ifdef::controller-GS[]
-//. To add a new credential, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-getting-started-create-credential[Creating a credential] in _{ControllerUG}_.
-//+
-//[NOTE]
-//====
-//When you set up additional credentials, the user you assign must have root access or be able to use SSH to connect to the host machine.
-//====
-//+
-//. Click btn:[Demo Credential] to view its details.
-
-//image::controller-credentials-demo-details.png[Demo Credential]
-//endif::controller-GS[]
-//ifdef::controller-UG[]
 . On the *Credentials* page, click btn:[Create credential].
 //+
 //image:credentials-create-credential.png[Credentials-create]
@@ -39,7 +26,7 @@ Add more credentials as needed.
 * *Name*: the name for your new credential.
 * (Optional) *Description*: a description for the new credential.
 * Optional *Organization*: The name of the organization with which the credential is associated. The default is *Default*.
-* *Credential Type*: enter or select the credential type you want to create.
+* *Credential type*: enter or select the credential type you want to create.
 
 . Enter the appropriate details depending on the type of credential selected, as described in xref:ref-controller-credential-types[Credential types].
 +
