--- a/downstream/modules/platform/proc-controller-create-custom-notifications.adoc
+++ b/downstream/modules/platform/proc-controller-create-custom-notifications.adoc
@@ -7,9 +7,9 @@ You can xref:controller-attributes-custom-notifications[customize the text conte
 .Procedure
 
 . From the navigation panel, select {MenuAEAdminJobNotifications}.
-. Click btn:[Add notifier].
+. Click btn:[Create notifier].
 . Choose a notification type from the *Type* list.
-. Enable *Customize messages* using the toggle.
+. Enable *Customize messages* by using the toggle.
 +
 image::ug-notification-template-customize.png[Customize notification]
 +
