--- a/downstream/modules/platform/proc-controller-create-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-instance-group.adoc
@@ -34,7 +34,7 @@ For more information, see link:{URLControllerUserGuide}/index#controller-instanc
 endif::operator-mesh[]
 ====
 
-. Click btn:[Create Instance Group], or, if you have edited an existing Instance Group click btn:[Save Instance Group]
+. Click btn:[Create instance group], or, if you have edited an existing Instance Group click btn:[Save instance group]
 
 When you have successfully created the instance group the *Details* tab of the newly created instance group enables you to review and edit your instance group information.
 
