--- a/downstream/modules/platform/proc-controller-create-notification-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-notification-template.adoc
@@ -15,4 +15,4 @@ Use the following procedure to create a notification template.
 * *Organization*: Specify the organization that the notification belongs to.
 * *Type*: Choose a type of notification from the drop-down menu.
 For more information, see the xref:controller-notification-types[Notification types] section.
-. Click btn:[Save].
+. Click btn:[Save notifier].
