--- a/downstream/modules/platform/proc-controller-customize-pod-spec.adoc
+++ b/downstream/modules/platform/proc-controller-customize-pod-spec.adoc
@@ -10,12 +10,12 @@ A full list of options can be found in the link:https://docs.openshift.com/onlin
 
 . From the navigation panel, select {MenuInfrastructureInstanceGroups}.
 . Click btn:[Create group] and select *Create container group*.
-. Check the option for *Customize pod spec* 
-. Enter a custom Kubernetes or OpenShift Pod specification in the *Pod Spec Override* field.
+. Check the option for *Customize pod spec*. 
+. Enter a custom Kubernetes or OpenShift Pod specification in the *Pod spec override* field.
 +
 image::ag-instance-group-customize-cg-pod.png[Customize pod specification]
 +
-. Click btn:[Create Container Group].
+. Click btn:[Create container group].
 
 //You can give additional customizations, if needed. Click btn:[Expand] to view the entire customization window:
 
