--- a/downstream/modules/platform/proc-controller-inv-source-terraform.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-terraform.adoc
@@ -14,9 +14,9 @@ The plugin parses a terraform state file and add hosts for AWS EC2, GCE, and {Az
 ** Enter the appropriate details according to the steps in xref:proc-controller-adding-a-project[Adding a new project].
 . From the navigational panel, select {MenuInfrastructureInventories}.
 . Select the inventory that you want to add a source to.
-. In the *Sources* tab, click btn:[Add source].
+. In the *Sources* tab, click btn:[Create source].
 . From the menu:Source[] menu, select *Terraform State*.
-* The *Add new source* window expands with the required *Credential* field. 
+* The *Create source* window expands with the optional *Credential* field. 
 +
 Choose an existing Terraform backend configuration credential. For more information, see xref:ref-controller-credential-terraform[Terraform backend configuration].
 . Enable the options to *Overwrite* and *Update on Launch*.
