--- a/downstream/modules/platform/proc-controller-remediate-insights-inventory.adoc
+++ b/downstream/modules/platform/proc-controller-remediate-insights-inventory.adoc
@@ -24,7 +24,7 @@ The credential does not have to be a Red Hat Insights credential.
 +
 image::ug-insights-create-job-template.png[Insights job template]
 +
-. Click btn:[Save].
+. Click btn:[Create job template].
 . Click the launch image:rightrocket.png[Launch,15,15] icon to launch the job template.
 
 When complete, the job results in the *Job Details* page.
