--- a/downstream/modules/platform/ref-controller-content-sourcing.adoc
+++ b/downstream/modules/platform/ref-controller-content-sourcing.adoc
@@ -23,7 +23,7 @@ Additionally, post-upgrade, these settings are not visible (or editable) from th
 
 {ControllerNameStart} continues to fetch roles directly from public Galaxy even if `galaxy.ansible.com` is not the first credential in the list for the organization. The global Galaxy settings are no longer configured at the jobs level, but at the organization level in the user interface.
 
-The organization's *Add* and *Edit* windows have an optional *Credential* lookup field for credentials of `kind=galaxy`.
+The organization's *Create organization* and *Edit organization* windows have an optional *Galaxy credentials* lookup field for credentials of `kind=galaxy`.
 
 image:organizations-galaxy-credentials.png[Create organization]
 
