--- a/downstream/modules/platform/ref-controller-credential-network.adoc
+++ b/downstream/modules/platform/ref-controller-credential-network.adoc
@@ -30,8 +30,8 @@ Provide the following information for network credentials:
 * *Password*: The password to use in conjunction with the network device.
 * *SSH Private Key*: Copy or drag-and-drop the actual SSH Private Key to be used to authenticate the user to the network through SSH.
 * *Private Key Passphrase*: The passphrase for the private key to authenticate the user to the network through SSH.
-* *Authorize*: Select this from the Options field to control whether or not to enter privileged mode.
-* If *Authorize* is checked, enter a password in the *Authorize Password* field to access privileged mode.
+* *Authorize*: Select this to control whether or not to enter privileged mode.
+** If *Authorize* is checked, enter a password in the *Authorize Password* field to access privileged mode.
 
 For more information, see link:https://www.ansible.com/blog/porting-ansible-network-playbooks-with-new-connection-plugins[Porting Ansible Network Playbooks with New Connection Plugins].
 
