--- a/downstream/modules/platform/ref-controller-credential-openShift.adoc
+++ b/downstream/modules/platform/ref-controller-credential-openShift.adoc
@@ -4,17 +4,17 @@
 
 Select this credential type to create instance groups that point to a Kubernetes or OpenShift container. 
 
-For more information, see link:https://docs.ansible.com/automation-controller/4.4/html/administration/containers_instance_groups.html#ag-ext-exe-env[Container and Instance Groups] in the _{ControllerAG}_.
+For more information, see xref:controller-instance-and-container-groups[Instance and container groups].
 
 //image:credentials-create-containers-credential.png[Credentials- create Containers credential]
 
 Provide the following information for container credentials:
 
 * *OpenShift or Kubernetes API Endpoint* (required): The endpoint used to connect to an OpenShift or Kubernetes container.
-* *API Authentication Bearer Token* (required): The token used to authenticate the connection.
+* *API authentication bearer token* (required): The token used to authenticate the connection.
 * Optional: *Verify SSL*: You can check this option to verify the server's SSL/TLS certificate is valid and trusted. 
 Environments that use internal or private _Certificate Authority_ (CA) must leave this option unchecked to disable verification.
-* *Certificate Authority Data*: Include the `BEGIN CERTIFICATE` and `END CERTIFICATE` lines when pasting the certificate, if provided.
+* *Certificate Authority data*: Include the `BEGIN CERTIFICATE` and `END CERTIFICATE` lines when pasting the certificate, if provided.
 
 A container group is a type of instance group that has an associated credential that enables connection to an OpenShift cluster. 
 To set up a container group, you must have the following items:
