--- a/downstream/modules/platform/ref-controller-credential-openStack.adoc
+++ b/downstream/modules/platform/ref-controller-credential-openStack.adoc
@@ -6,14 +6,15 @@ Select this credential type to enable synchronization of cloud inventory with Op
 
 //image:credentials-create-openstack-credential.png[Credentials- create OpenStack credential]
 
-Provide the following information for OpenStack credentials:
+Enter the following information for OpenStack credentials:
 
 * *Username*: The username to use to connect to OpenStack.
 * *Password (API Key)*: The password or API key to use to connect to OpenStack.
 * *Host (Authentication URL)*: The host to be used for authentication.
 * *Project (Tenant Name)*: The Tenant name or Tenant ID used for OpenStack. 
 This value is usually the same as the username.
-* Optional: *Project (Domain Name)*: Provide the project name associated with your domain.
-* Optional: *Domain name*: Provide the FQDN to be used to connect to OpenStack.
+* Optional: *Project (Domain Name)*: Give the project name associated with your domain.
+* Optional: *Domain Name*: Give the FQDN to be used to connect to OpenStack.
+* Optional: *Region Name*: Give the region name. For some cloud providers, like OVH, the region must be specified.
 
 If you are interested in using OpenStack Cloud Credentials, see xref:controller-cloud-credentials[Use Cloud Credentials with a cloud inventory], which includes a sample playbook.
