--- a/downstream/modules/platform/ref-controller-credential-terraform.adoc
+++ b/downstream/modules/platform/ref-controller-credential-terraform.adoc
@@ -15,12 +15,11 @@ Terraform backend configuration requires the following inputs:
 * *Name*
 * Credential type: Select *Terraform backend configuration*.
 * Optional: *Organization*
-* Optional: *Description*
-//Not yet available in test env. 
+* Optional: *Description* 
 * *Backend configuration*: Drag a file here or browse to upload. 
-
++
 Example configuration for an S3 backend:
-
++
 ----
 bucket = "my-terraform-state-bucket"
 key = "path/to/terraform-state-file"
@@ -28,3 +27,5 @@ region = "us-east-1"
 access_key = "my-aws-access-key"
 secret_key = "my-aws-secret-access-key"
 ----
++
+* Optional: *Google Cloud Platform account credentials*
