--- a/downstream/assemblies/platform/assembly-controller-instances.adoc
+++ b/downstream/assemblies/platform/assembly-controller-instances.adoc
@@ -2,13 +2,13 @@
 
 = Managing capacity with Instances
 
-Scaling your {AutomationMesh} is available on OpenShift deployments of {PlatformName} and is possible through adding or removing nodes from your cluster dynamically, using the *Instances* resource of the {ControllerName} UI, without running the installation script.
+Scaling your {AutomationMesh} is available on OpenShift deployments of {PlatformName} and is possible through adding or removing nodes from your cluster dynamically, using the *Instances* resource of the UI, without running the installation script.
 
 Instances serve as nodes in your mesh topology. 
 {AutomationMeshStart} enables you to extend the footprint of your automation. 
 The location where you launch a job can be different from the location where the ansible-playbook runs.
 
-To manage instances from the {ControllerName} UI, you must have System Administrator or System Auditor permissions.
+To manage instances from the UI, you must have System Administrator or System Auditor permissions.
 
 In general, the more processor cores (CPU) and memory (RAM) a node has, the more jobs that can be scheduled to run on that node at once. 
 
