--- a/downstream/modules/platform/con-controller-notification-workflow.adoc
+++ b/downstream/modules/platform/con-controller-notification-workflow.adoc
@@ -2,7 +2,7 @@
 
 = Notification workflow
 
-When a job succeeds or fails, the error or success handler pulls a list of relevant notification templates using the procedure defined in the xref:controller-notifications[Notifications] section.
+When a job succeeds or fails, the error or success handler pulls a list of relevant notification templates using the procedure defined in the xref:controller-notifications[Notifiers] section.
 
 It then creates a notification object for each one, containing relevant details about the job and sends it to the destination. 
 These include email addresses, slack channels, and SMS numbers. 
