--- a/downstream/modules/platform/proc-controller-create-credential-type.adoc
+++ b/downstream/modules/platform/proc-controller-create-credential-type.adoc
@@ -5,9 +5,10 @@
 To create a new credential type:
 
 .Procedure
-. In the *Credential Types* view, click btn:[Add].
+. From the navigation panel, select {MenuAECredentials}.
+. In the *Credential Types* view, click btn:[Create credential type].
 +
-image:credential-types-create-new.png[Create new credential type]
+//image:credential-types-create-new.png[Create new credential type]
 
 . Enter the appropriate details in the *Name* and *Description* field.
 +
@@ -16,7 +17,7 @@ image:credential-types-create-new.png[Create new credential type]
 When creating a new credential type, do not use reserved variable names that start with `ANSIBLE_` for the *INPUT* and *INJECTOR* names and IDs, as they are invalid for custom credential types.
 ====
 
-. In the *Input Configuration* field, specify an input schema that defines a set of ordered fields for that type. 
+. In the *Input configuration* field, specify an input schema that defines a set of ordered fields for that type. 
 The format can be in YAML or JSON:
 +
 *YAML*
@@ -109,7 +110,7 @@ When `type=string`, fields can optionally specify multiple choice options:
 },
 ----
 
-. In the *Injector Configuration* field, enter environment variables or extra variables that specify the values a credential type can inject.
+. In the *Injector configuration* field, enter environment variables or extra variables that specify the values a credential type can inject.
 The format can be in YAML or JSON (see examples in the previous step).
 +
 The following configuration in JSON format shows each field and how they are used:
@@ -187,7 +188,7 @@ The following is an example of referencing many files in a custom credential tem
 }
 ----
 
-. Click btn:[Save].
+. Click btn:[Create credential type].
 +
 Your newly created credential type is displayed on the list of credential types:
 +
