--- a/downstream/modules/platform/proc-controller-create-host.adoc
+++ b/downstream/modules/platform/proc-controller-create-host.adoc
@@ -11,7 +11,8 @@ To create a new host.
 
 * *Name*: Enter a name for your host.
 * (Optional) *Description*: Enter a description for your host.
-* *Inventory*: Select the inventory from the list to contain your host.
+// [emcwhinn] Inventory is not an option in 2.5 UI.
+//* *Inventory*: Select the inventory from the list to contain your host.
 * *Variables*: Enter the inventory file variables associated with your host.
 
 . Click btn:[Create host] to save your changes.
