--- a/downstream/modules/platform/ref-controller-credential-vault.adoc
+++ b/downstream/modules/platform/ref-controller-credential-vault.adoc
@@ -8,11 +8,11 @@ Select this credential type to enable synchronization of inventory with Ansible 
 
 Vault credentials require the *Vault Password* and an optional *Vault Identifier* if applying multi-Vault credentialing. 
 
-For more information on the Multi-Vault support, refer to the link:https://docs.ansible.com/automation-controller/latest/html/administration/multi-creds-assignment.html#multi-vault-credentials[Multi-Vault Credentials] section of the _{ControllerAG}_.
+// For more information about the Multi-Vault support, see the link:https://docs.ansible.com/automation-controller/latest/html/administration/multi-creds-assignment.html#multi-vault-credentials[Multi-Vault Credentials] section of _{ControllerAG}_.
 
 You can configure {ControllerName} to ask the user for the password at launch time by selecting *Prompt on launch*. 
 
-When you select *Prompt on Launch*, a dialog opens when the job is launched, prompting the user to enter the password.
+When you select *Prompt on launch*, a dialog opens when the job is launched, prompting the user to enter the password.
 
 [WARNING]
 ====
